terraform/environments/dev/sg.tf
/*
==============================================================================
Application Load Balancer Security Group
==============================================================================
*/

resource "aws_security_group" "alb" {

  name = "${local.project_name}-${var.environment}-alb-sg"

  description = "Security Group for Application Load Balancer"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = merge(

    local.common_tags,

    {

      Name = "${local.project_name}-${var.environment}-alb-sg"

    }

  )

}
/*
==============================================================================
Application Security Group
==============================================================================
*/

resource "aws_security_group" "app" {

  name = "${local.project_name}-${var.environment}-app-sg"

  description = "Security Group for Application Servers"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "HTTP from ALB"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    security_groups = [

      aws_security_group.alb.id

    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = merge(

    local.common_tags,

    {

      Name = "${local.project_name}-${var.environment}-app-sg"

    }

  )

}
/*
==============================================================================
Bastion Security Group
==============================================================================
*/

resource "aws_security_group" "bastion" {

  name = "${local.project_name}-${var.environment}-bastion-sg"

  description = "Security Group for Bastion Host"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "SSH"

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = merge(

    local.common_tags,

    {

      Name = "${local.project_name}-${var.environment}-bastion-sg"

    }

  )

}
